# hge

./: .gitignore  CMakeLists.txt
include/: hge.h  hgeanim.h  hgedistort.h  hgefont.h  hgerect.h  hgesprite.h  hgestrings.h  hgevector.h  notimplemented.h
src/core/: graphics.cpp  hge_impl.h  resource.cpp  sound.cpp  system.cpp  timer.cpp
src/core/BASS/: bass.h
src/fonted/: fonted.cpp  generate.cpp  savepng.cpp
src/helpers/: hgecolor.cpp  hgedistort.cpp  hgefont.cpp  hgesprite.cpp  hgestrings.cpp  resources.cpp
